Fix/validation seller admin (#18)
* feat(seller): add strict validations for product creation form

* feat(seller): add double confirmation modal for product deletion

* ui(seller): sync flash sale badge styling in order management

* feat(seller): implement upcoming flash sale notification and form constraints

* feat(admin,auth): implement message reason for deactivate account

* refactor(backend): apply clean code and logging across admin, seller, and user profile

* fix: resolve compilation error and clean up admin dashboard UI

* feat(seller,admin): add validation name product and flashsale

* feat(unit test): add unit test

* feat(seller): add validation price

* feat(user): add auto refresh from flesh sale and add countdown flash sale

* feat(unit test): add unit test

* Potential fix for pull request finding for ObjectMapper import

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding for seller deactivate reason payload extraction

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding for ObjectMapper import

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding for ObjectMapper import

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding on ProductControllerTest

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding on seller FlashSaleManager page

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding on SellerSIdebar component

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: Kenzie Tama <kenzietama@protonmail.com>
Co-a